Fixed background gradient issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,9 +16,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: radial-gradient(ellipse at 70% 90%, #7b206e 0%, transparent 30%),
-              radial-gradient(ellipse at 20% 0%, #054a85 0%, transparent 30%),
-              linear-gradient(120deg, #274472 0%, #0f2027 100%);
-  background-color: #0f2027;
+  background: #054A85;
+  background: linear-gradient(135deg, rgba(5, 74, 133, 1) 0%, rgba(9, 9, 121, 1) 59%, rgba(123, 32, 110, 1) 100%);
   color: #fff;
 }
